feat: Enhance character creation options and add AI intent resolver tests
- Introduced CharacterCreationOptionsRegistry to manage character races and pronouns.
- Added JSON configuration for character options.
- Updated LoginHandlerTest to utilize character creation options during player setup.
- Implemented tests for character creation options and AI intent resolver.
- Added new tests for command factory and command registry to validate direction aliases.
- Created QuestLoader and QuestService tests to ensure quest functionality and error handling.